	* Added a 'WHCgiPost::sendDisonnectWifiCommand()' method.
2018-06-19 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:0:6.
	* Incremented the package version to 1.6.0.
2018-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in webhostd(8) that caused wifi connections to be
	incompletely removed.
2018-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:1:6.
	* Incremented the package version to 1.6.1.
2018-06-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::cpuinfoModelName()' method.
	* Added a 'WHCgiPost::cpuinfoHardware()' method.
	* Added a 'WHCgiPost::cpuinfoRevision()' method.
	* Added a 'WHCgiPost::cpuinfoSerial()' method.
2018-06-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 10:0:7.
	* Incremented the package version to 1.7.0.
2018-06-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::sendDisableIpCommand()' method.
	* Removed the 'WHCgiPost::dhcpActive()' method.
	* Added a 'WHCgiPost::interfaceMode()' method.
2018-06-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHInterfaceIPv4Broadcast()' function.
2018-06-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 11:0:0.
	* Incremented the package version to 1.8.0.
2018-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused disablement of an ethernet port
	to not be persistent across reboots.
2018-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 11:1:0.
	* Incremented the package version to 1.8.1.
2018-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'WHCgiPost::sendIpCommand()' that caused DHCP
	connections to have incorrect gateway and DNS setting when used
	without network managed enabled.
2018-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 11:2:0.
	* Incremented the package version to 1.8.2.