@@ -422,3 +422,6 @@
 2018-06-27 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 11:2:0.
 	* Incremented the package version to 1.8.2.
+2021-12-31 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'WHCgiPost' that caused corruption when processing
+	non-Latin1 UTF-8 characters.
